[gd_scene load_steps=16 format=3 uid="uid://c0uyyn87hhsjx"]

[ext_resource type="PackedScene" uid="uid://kgpxv8yxnjo0" path="res://scenes/song_selection/song_selection_bg.tscn" id="1_78bma"]
[ext_resource type="Script" path="res://scenes/matchmaking/match_creation.gd" id="1_ns6eg"]
[ext_resource type="PackedScene" uid="uid://bpsr6id66vxk2" path="res://scenes/left_bar/left_bar.tscn" id="2_robjm"]
[ext_resource type="Script" path="res://scenes/matchmaking/view_dev_options_button.gd" id="3_21nlk"]
[ext_resource type="PackedScene" uid="uid://r5oy8h4p8suy" path="res://scenes/song_selection/song_selection.tscn" id="3_fjo8l"]
[ext_resource type="PackedScene" uid="uid://b2ew1c3swawaj" path="res://scenes/instrument_selection/instrument_selection_item.tscn" id="4_bvl1i"]
[ext_resource type="PackedScene" uid="uid://b15ivw3lwhasd" path="res://scenes/ui_elements/basic_rounded_button_01.tscn" id="4_iljf2"]
[ext_resource type="Script" path="res://scenes/matchmaking/audio_offset_edit.gd" id="4_v5wlx"]
[ext_resource type="PackedScene" uid="uid://dl4nx74f03pxd" path="res://scenes/ui_elements/glass_panel.tscn" id="4_wmdhf"]
[ext_resource type="FontFile" uid="uid://bd4vhm6dvnuue" path="res://fonts/Games.ttf" id="5_6xkhb"]
[ext_resource type="PackedScene" uid="uid://dcuwyk5e6co0q" path="res://scenes/ui_elements/compact_song_preview/compact_song_preview.tscn" id="5_ksw1l"]
[ext_resource type="PackedScene" uid="uid://f6a8g2qh0dtg" path="res://scenes/ui_elements/line_edits/password_edit.tscn" id="6_a3oio"]
[ext_resource type="PackedScene" uid="uid://6rl8bcr45rgo" path="res://scenes/instrument_selection/instrument_selection_panel.tscn" id="8_ssqce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow2un"]
bg_color = Color(0.0431373, 0.0431373, 0.0431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1k3g"]
bg_color = Color(0, 0, 0, 0.384314)

[node name="match_creation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_ns6eg")

[node name="Background" parent="." instance=ExtResource("1_78bma")]
layout_mode = 1

[node name="VBox" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
offset_right = -20.0
grow_horizontal = 0

[node name="ViewDevOptionsCheckBox" type="CheckBox" parent="Background/VBox"]
layout_mode = 2
focus_mode = 0
text = "show development variables."
script = ExtResource("3_21nlk")

[node name="DevOptions" type="ScrollContainer" parent="Background/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="Background/VBox/DevOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBox/DevOptions/VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Background/VBox/DevOptions/VBox/HBoxContainer"]
layout_mode = 2
text = "audio offset "

[node name="Control" type="Control" parent="Background/VBox/DevOptions/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioOffsetEdit" type="LineEdit" parent="Background/VBox/DevOptions/VBox/HBoxContainer"]
layout_mode = 2
tooltip_text = "F"
theme_override_styles/normal = SubResource("StyleBoxFlat_ow2un")
theme_override_styles/focus = SubResource("StyleBoxFlat_ow2un")
theme_override_styles/read_only = SubResource("StyleBoxFlat_ow2un")
script = ExtResource("4_v5wlx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 40

[node name="LeftBar" parent="HBoxContainer" instance=ExtResource("2_robjm")]
layout_mode = 2

[node name="Right" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="MatchCreateParameters" type="Control" parent="HBoxContainer/Right"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Right/MatchCreateParameters"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_right = 0.6
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Right/MatchCreateParameters/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 40
alignment = 1

[node name="InstrumentSelectionItem" parent="HBoxContainer/Right/MatchCreateParameters/HBoxContainer/VBoxContainer" instance=ExtResource("4_bvl1i")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 500)
layout_mode = 2

[node name="compact_song_preview" parent="HBoxContainer/Right/MatchCreateParameters/HBoxContainer/VBoxContainer" instance=ExtResource("5_ksw1l")]
unique_name_in_owner = true
layout_mode = 2

[node name="JoinPassword" parent="HBoxContainer/Right/MatchCreateParameters/HBoxContainer/VBoxContainer" groups=["multiplayer_creation"] instance=ExtResource("6_a3oio")]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Join Password"

[node name="CreateMatchButton" parent="HBoxContainer/Right/MatchCreateParameters/HBoxContainer/VBoxContainer" instance=ExtResource("4_iljf2")]
unique_name_in_owner = true
layout_mode = 2
text = "Create Match"

[node name="SongSelection" parent="HBoxContainer/Right" instance=ExtResource("3_fjo8l")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="InstrumentSelectionPanel" parent="HBoxContainer/Right" instance=ExtResource("8_ssqce")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PopupBG" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t1k3g")

[node name="CreatingMatchPopup" type="MarginContainer" parent="PopupBG"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BackBufferCopy" type="BackBufferCopy" parent="PopupBG/CreatingMatchPopup"]
position = Vector2(160, 140)
copy_mode = 2
rect = Rect2(0, 0, 800, 400)

[node name="glass_panel" parent="PopupBG/CreatingMatchPopup" instance=ExtResource("4_wmdhf")]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PopupBG/CreatingMatchPopup/glass_panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_6xkhb")
theme_override_font_sizes/font_size = 50
text = "Creating Match"
horizontal_alignment = 1

[connection signal="pressed" from="HBoxContainer/Right/MatchCreateParameters/HBoxContainer/VBoxContainer/InstrumentSelectionItem" to="." method="_on_instrument_selection_item_pressed"]
[connection signal="pressed" from="HBoxContainer/Right/MatchCreateParameters/HBoxContainer/VBoxContainer/compact_song_preview" to="." method="_on_compact_song_preview_pressed"]
[connection signal="pressed" from="HBoxContainer/Right/MatchCreateParameters/HBoxContainer/VBoxContainer/CreateMatchButton" to="." method="_on_create_match_button_pressed"]
[connection signal="go_back" from="HBoxContainer/Right/SongSelection" to="." method="_on_song_selection_go_back"]
[connection signal="items_reloaded" from="HBoxContainer/Right/SongSelection" to="." method="_on_song_selection_items_reloaded"]
[connection signal="song_selected" from="HBoxContainer/Right/SongSelection" to="." method="_on_song_selection_song_selected"]
[connection signal="instrument_selected" from="HBoxContainer/Right/InstrumentSelectionPanel" to="." method="_on_instrument_selection_panel_instrument_selected"]
